opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/postgres_async"
bug-reports: "https://github.com/janestreet/postgres_async/issues"
dev-repo: "git+https://github.com/janestreet/postgres_async.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/postgres_async/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "async_ssl"
  "core"
  "core_kernel"
  "ppx_jane"
  "dune"        {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml/async implementation of the postgres protocol (i.e., does not use C-bindings to libpq)"
description: "
postgres_async is an OCaml PostgreSQL client that implements the PostgreSQL 
protocol rather than binding to the libpq C library. It provides support for 
regular queries (including support for 'parameters': \"SELECT * WHERE a = $1\")
and COPY IN mode. The interface presented is minimal to keep the library simple
for now, though in the future a layer on top may add convenience functions.
"
